DemoOrg/src/Apttus Quote/Proposal-Configuration Integration/objects/ProposalUsagePriceTier__c.object
<CustomObject>
    <description>Represents a single entry in a quote/proposal usage price tier</description>
    <fields>
        <fullName>AdjustmentAmount__c</fullName>
        <description>The price adjustment amount.</description>
        <label>Adjustment Amount</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AdjustmentType__c</fullName>
        <description>The price adjustment type</description>
        <label>Adjustment Type</label>
        <picklist>
            <picklistValues>
                <fullName>% Discount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discount Amount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>% Markup</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Markup Amount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>List Price Override</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tier Price</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CommitmentQuantity__c</fullName>
        <description>The quantity commitment for the period</description>
        <inlineHelpText>The quantity commitment for the period</inlineHelpText>
        <label>Commitment Quantity</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dimension1Value__c</fullName>
        <description>The value for the first dimension</description>
        <label>Dimension 1 Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dimension2Value__c</fullName>
        <description>The value for the second dimension</description>
        <label>Dimension 2 Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dimension3Value__c</fullName>
        <description>The value for the third dimension</description>
        <label>Dimension 3 Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FlatPrice__c</fullName>
        <description>The flat price for the tier or period</description>
        <inlineHelpText>The flat price for the tier or period</inlineHelpText>
        <label>Flat Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IsIncluded__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the tier is included</description>
        <inlineHelpText>Indicates whether the tier is included</inlineHelpText>
        <label>Is Included</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LineItemId__c</fullName>
        <description>ID of the associated quote/proposal line item</description>
        <label>Line Item</label>
        <referenceTo>Apttus_Proposal__Proposal_Line_Item__c</referenceTo>
        <relationshipLabel>Usage Price Tiers</relationshipLabel>
        <relationshipName>UsagePriceTiers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PeriodEndDate__c</fullName>
        <description>The usage period end date</description>
        <inlineHelpText>The usage period end date</inlineHelpText>
        <label>Period End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PeriodStartDate__c</fullName>
        <description>The usage period start date</description>
        <inlineHelpText>The usage period start date</inlineHelpText>
        <label>Period Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PriceOverride__c</fullName>
        <description>The price override</description>
        <label>Price Override</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <description>The tier entry sequence</description>
        <label>Sequence</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TierEndValue__c</fullName>
        <description>The tier end value</description>
        <inlineHelpText>The tier end value</inlineHelpText>
        <label>Tier End Value</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TierStartValue__c</fullName>
        <description>The tier start value</description>
        <inlineHelpText>The tier start value</inlineHelpText>
        <label>Tier Start Value</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UsageRate__c</fullName>
        <description>The usage rate for the tier or period</description>
        <inlineHelpText>The usage rate for the tier or period</inlineHelpText>
        <label>Usage Rate</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <label>Proposal Usage Price Tier</label>
    <nameField>
        <displayFormat>QT-{0000000000}</displayFormat>
        <label>Tier Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Proposal Usage Price Tiers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>